# trab-IA

./: .editorconfig  Makefile  README.md  build  check.go  leiame.txt  main  main.c  shell.nix
cvc5/lib/: libcvc5parser.so.1  libgmp.la  libgmp.so.10  libgmpxx.la  libgmpxx.so.4  libpoly.so.0.1.13  libpolyxx.so.0.1.13
cvc5/lib/cmake/cvc5/: cvc5Config.cmake  cvc5JavaTargets.cmake  cvc5Targets-production.cmake  cvc5Targets.cmake
cvc5/lib/pkgconfig/: gmp.pc  gmpxx.pc
examples/: 00  01  02
src/: CMakeCache.txt  CMakeLists.txt  Main.cc  Makefile  cmake_install.cmake  main  main.c  main.cpp  rgol.c  rgol.h  utils.c  utils.h
test/: 00  02
